--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,32 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
 
-* {
-  box-sizing: border-box;
+
+@layer components {
+    .container {
+        @apply max-w-6xl mx-auto
+    }
+    .flex-between {
+        @apply flex items-center justify-between
+    }
+    .link {
+        @apply text-base md:text-lg hover:underline hover:text-blue-500
+    }
+    .input-control {
+        @apply flex flex-col mb-3 space-y-2
+    }
+    .input-add {
+        @apply p-2 bg-transparent border border-gray-700 rounded outline-none focus:border-2 focus:border-blue-700
+    }
+    .input-message {
+        @apply p-2 bg-transparent border-b border-gray-600 outline-none
+    }
+    .btn {
+        @apply py-2 px-4 cursor-pointer rounded-md text-white bg-blue-500 hover:bg-blue-600 transition duration-200
+    }
+    .category {
+        @apply rounded-lg whitespace-nowrap bg-gray-700 text-white py-[8px] px-[12px] text-lg cursor-pointer font-medium transition duration-200 hover:bg-gray-800
+    }
 }
